--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@formspree/react": "^3.0.0",
     "@hookform/resolvers": "^5.1.1",
+    "@next/third-parties": "^15.0.0",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
@@ -25,14 +26,18 @@
     "@radix-ui/react-tooltip": "^1.2.7",
     "@react-three/drei": "^10.5.1",
     "@react-three/fiber": "^9.2.0",
+    "@supabase/supabase-js": "^2.39.0",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
+    "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "critters": "^0.0.23",
+    "dompurify": "^3.0.0",
     "framer-motion": "^12.23.5",
     "gsap": "^3.13.0",
+    "jsonwebtoken": "^9.0.2",
     "lenis": "^1.3.8",
     "lucide-react": "^0.525.0",
     "maath": "^0.10.8",
@@ -44,16 +49,23 @@
     "react-dom": "19.1.0",
     "react-hook-form": "^7.60.0",
     "react-intersection-observer": "^9.16.0",
+    "react-markdown": "^9.0.0",
+    "remark-gfm": "^4.0.0",
     "tailwind-merge": "^3.3.1",
+    "uuid": "^9.0.1",
     "zod": "^4.0.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/cli": "^4.1.11",
     "@tailwindcss/postcss": "^4.1.11",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/dompurify": "^3.0.0",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/uuid": "^9.0.8",
     "eslint": "^9",
     "eslint-config-next": "15.4.1",
     "tailwindcss": "^4.1.11",
