Add admin user creation script

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "type-check": "tsc --noEmit",
-    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,md,json}\""
+    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,md,json}\"",
+    "add-admin": "node scripts/add-admin.js"
   },
   "dependencies": {
     "@formspree/react": "^3.0.0",
